# kattis

./: .gitignore  Cargo.toml  README.md  template.cpp
autori/: in.txt
cold/: Cargo.toml
cpp/: 10kindsofpeople.cpp  2048.cpp  3dprinter.cpp  8queens.cpp  99problems.cpp  aaah.cpp  abc.cpp  aboveaverage.cpp  acm.cpp  akcija.cpp  alicedigital.cpp  aliennumbers.cpp  alldifferentdirections.cpp  allpairspath.cpp  alphabetspam.cpp  amoebas.cpp  anewalphabet.cpp  anotherbrick.cpp  anthonyanddiablo.cpp  apaxiaaans.cpp  apaxianparent.cpp  aprizenoonecanwin.cpp  areal.cpp  areyoulistening.cpp  arithmetic.cpp  arithmeticfunctions.cpp  armcoordination.cpp  armystrengtheasy.cpp  asciiaddition.cpp  astrologicalsign.cpp  averagecharacter.cpp  averageseasy.cpp  avion.cpp  babelfish.cpp  babybites.cpp  (+495 more)
rust/: Cargo.toml
rust/a_different_problem/: Cargo.toml
rust/autori/: Cargo.toml
rust/autori/src/: main.rs
rust/carrots/: Cargo.toml
rust/cold/src/: main.rs
rust/hello/: Cargo.toml
rust/pervasiveheartmonitor/: Cargo.toml
rust/pervasiveheartmonitor/src/: main.rs
rust/pet/src/: main.rs
rust/pieceofcake2/src/: main.rs
rust/planina/: Cargo.toml
rust/planina/src/: main.rs
rust/pot/: Cargo.toml
rust/pot/src/: main.rs
rust/quadrant/: Cargo.toml
rust/quadrant/src/: main.rs
rust/r2/: Cargo.toml
rust/shatteredcake/src/: main.rs
rust/sibice/: Cargo.toml
rust/tarifa/: Cargo.toml
rust/tarifa/src/: main.rs
rust/twostones/: Cargo.toml
rust/watchdog/src/: main.rs
rust/whatdoesthefoxsay/: Cargo.toml
rust/yoda/: Cargo.toml
rust/yoda/src/: main.rs
(+33 files in other folders)
