
[workspace]

members = [
    "a_different_problem",
    "hello",
    "autori",
    "quadrant",
    "planina",
    "divideby100",
    "whatdoesthefoxsay",
    "greetings2",
    "tarifa",
    "twostones",
    "timeloop",
    "stopwatch",
    "carrots",
    "addemup",
    "jackolanternjuxtaposition",
    "simonsays",
    "sibice",
    "shatteredcake",
    "cold",
    "r2",
    "qaly",
    "pot",
    "pieceofcake2",
    "pet",
]
