
[workspace]

members = [
    "a_different_problem",
    "hello",
    "autori",
    "quadrant",
    "planina",
    "whatdoesthefoxsay",
    "greetings2",
    "tarifa",
    "twostones",
    "timeloop",
    "stopwatch",
    "carrots",
    "jackolanternjuxtaposition",
    "simonsays",
    "sibice",
    "shatteredcake",
    "cold",
    "r2",
    "qaly",
    "pot",
    "pieceofcake2",
    "pet",
    "yoda",
    "watchdog",
    "pervasiveheartmonitor",
]
